All authentication now uses sessions instead of cookies
check_login now performs both the checking of login/authentication, but also updates the session (like update_cookie used to do)
Main menu now includes an admin menu link if you are logged in with the adminmail account
Main menu now includes a clickable link for score, which allows a player to trigger the function

TheKabal (18 August 2012)
--------------------------------------
Config.php is now config/configset_classic.ini.php
Config variables are loaded into and from the database
Files now include global_includes, instead of config.php

TheMightyDude (18 August 2012)
--------------------------------------
Fixed Notice: Use of undefined constant LOG_ADMIN_PLANETCHEAT - assumed 'LOG_ADMIN_PLANETCHEAT' in planet_report_ce.php

TheMightyDude (15 August 2012)
--------------------------------------
Fixed Notice: Use of undefined constant dev_escapepod - assumed 'dev_escapepod' in combat.php
Fixed Notice: Undefined index: loggedin, last_run in footer.php
Updated perfmon.php to allow the clicking on its links.

TheMightyDude (13 August 2012)
--------------------------------------
Added the Template API to support both Smarty Templates (HTML) and XML DOM (External Clients when added)

TheMightyDude (11 August 2012)
--------------------------------------
Added the Smarty Template Backend.
Added new include functions.

TheMightyDude (07 August 2012)
--------------------------------------
Fixed issue with perfmon.php where when you click on the explain links it then had issues with the database.
Fixed multiple Notice: Undefined offset: x in navcomp.php

TheKabal (05 August 2012)
--------------------------------------
Migrated newplayer guide and faq to PHP, fixed html, fixed CSS for them, changed all links to point to their new locations
Bumped version number for release
Removed dev file before release

TheMightyDude (05 August 2012)
--------------------------------------