@@ -22,9 +22,8 @@ if (preg_match("/player_insignia_name.php/i", $_SERVER['PHP_SELF'])) {
       die();
 }
 
-function player_insignia_name ($db, $a_username)
+function player_insignia_name ($db, $a_username, $langvars)
 {
-    global $langvars;
     unset ($player_insignia);
 
     // Lookup players score.
