@@ -19,8 +19,6 @@
 
 include 'global_includes.php';
 
-$title = "Blacknova Traders FAQ";
-$body_class = 'faq';
 if (!isset($_GET['lang']))
 {
     $_GET['lang'] = null;
@@ -32,8 +30,13 @@ else
     $lang = $_GET['lang'];
     $link = "?lang=" . $lang;
 }
+
+// New database driven language entries
+load_languages($db, $lang, array('global_funcs'), $langvars);
+
+$title = "Blacknova Traders New player guide";
+$body_class = 'faq';
 include 'header.php';
-global $langvars; // The language object
 ?>
 <table>
   <tbody>
