@@ -7,6 +7,8 @@ All authentication now uses sessions instead of cookies
 check_login now performs both the checking of login/authentication, but also updates the session (like update_cookie used to do)
 Main menu now includes an admin menu link if you are logged in with the adminmail account
 Main menu now includes a clickable link for score, which allows a player to trigger the function
+connect_database is now only called from common
+global $db is now only called inside connect_database
 
 TheKabal (18 August 2012)
 --------------------------------------
